--- a/README.rdoc
+++ b/README.rdoc
@@ -1,78 +1,80 @@
-== Welcome to Rails
+== Bienvenido a Rails
 
-Rails is a web-application framework that includes everything needed to create
-database-backed web applications according to the {Model-View-Controller (MVC)}[http://en.wikipedia.org/wiki/Model%E2%80%93view%E2%80%93controller] pattern.
+Rails es una plataforma de desarrollo de aplicaciones web que incluye todo lo que necesites para crear
+aplicaciones web con acceso dinamico a bases de datos de acuerdo al patron del {Modelo-Vista-Controlador (MVC)}[http://es.wikipedia.org/wiki/Modelo_Vista_Controlador].
 
-Understanding the MVC pattern is key to understanding Rails. MVC divides your application
-into three layers, each with a specific responsibility.
+El entender el patron del MVC es primordial para entender Rails. El MVC divide tu aplicación
+en tres capas, cada una con responsabilidades en especifico.
 
-The View layer is composed of "templates" that are responsible for providing 
-appropriate representations of your application's resources. Templates
-can come in a variety of formats, but most view templates are \HTML with embedded Ruby
-code (.erb files). 
+La capa de la Vista esta compuesta de "plantillas" que son responsables de proveer
+representaciones apropiadas de los recursos de tu aplicación. Las plantillas
+pueden venir en una gran variedad de formatos, pero, la mayoria de las plantillas son \HTML con codigo Ruby 
+embebido (archivos .erb).
 
-The Model layer represents your domain model (such as Account, Product, Person, Post) 
-and encapsulates the business logic that is specific to your application. In Rails, 
-database-backed model classes are derived from ActiveRecord::Base. Active Record allows
-you to present the data from database rows as objects and embellish these data objects 
-with business logic methods. Although most Rails models are backed by a database, models 
-can also be ordinary Ruby classes, or Ruby classes that implement a set of interfaces as
-provided by the ActiveModel module. You can read more about Active Record in its
-{README}[link:/rails/rails/blob/master/activerecord/README.rdoc].
+La capa del Modelo representa un modelo de tu dominio (tal como Cuenta, Producto, Persona, Articulo)
+y encapsula la logica de negocios que es particular para tu aplicación. En Rails,
+las clases del modelo respaldadas por la base de datos son derivadas de ActiveRecord::Base.
+ActiveRecord te permite presentar la data de las hileras de la base de datos como objetos y te permite
+decorar estos objetos de data con la logica de negocio de tu aplicación. A pesar que, la mayoria de los modelos en 
+Rails son respaldados por la base de datos, estos tambien pueden ser clases de Ruby ordinarias, 
+o clases de Ruby que implementan el conjunto de interfaces provistas por el modulo ActiveModel. 
+Puedes leer mas acerca de Active Record en su {LEEME}[link:/rails/rails/blob/master/activerecord/README.rdoc].
 
-The Controller layer is responsible for handling incoming HTTP requests and providing a 
-suitable response. Usually this means returning \HTML, but Rails controllers can also
-generate XML, JSON, PDFs, mobile-specific views, and more. Controllers manipulate models 
-and render view templates in order to generate the appropriate HTTP response.
+La capa del Controlador es responsable de manejar las peticiones entrantes de HTTP y de proveer
+una respuesta apropiada. Usualmente esto significa devolver \HTML, sin embargo, los controladores
+de Rails tambien pueden generar respuestas en XML, JSON, PDFs, vistas particulares para dispositivos moviles y mas.
+Los Controladores manipulan modelos y generan una respuesta a partir de las plantillas para producir 
+una respuesta HTTP apropiada.
 
-In Rails, the Controller and View layers are handled together by Action Pack.
-These two layers are bundled in a single package due to their heavy interdependence. 
-This is unlike the relationship between Active Record and Action Pack which are
-independent. Each of these packages can be used independently outside of Rails. You 
-can read more about Action Pack in its {README}[link:/rails/rails/blob/master/actionpack/README.rdoc].
+En Rails, las capas del Controlador y la Vista son manejadas conjuntamente por el Action Pack.
+Estas dos capas son unidas en un solo paquete debido a que dependen fuertemente una de la otra,
+en contraposición con la relación entre Active Record y Action Pack los cuales son autonomos uno del otro.
+Cada uno de estos paquetes se pueden usar independientemente fuera de Rails.
+Puedes leer mas sobre el Action Pack en su {LEEME}[link:/rails/rails/blob/master/actionpack/README.rdoc].
 
-== Getting Started
 
-1. Install Rails at the command prompt if you haven't yet:
+== Como Comenzar
+
+1. Instala Rails desde la linea de comando si todavia no lo has hecho:
 
     gem install rails
 
-2. At the command prompt, create a new Rails application:
+2. Desde la linea de comando, crea una nueva aplicación de Rails:
 
-    rails new myapp
+    rails new miaplicacion
 
-   where "myapp" is the application name.
+   donde "miaplicacion" es el nombre de la aplicación.
 
-3. Change directory to +myapp+ and start the web server:
+3. Cambia de directorio a +miaplicacion+ e inicializa el servidor de Rails:
 
-    cd myapp; rails server
+    cd miaplicacion; rails server
 
-   Run with <tt>--help</tt> or <tt>-h</tt> for options.
+   Ejecutalo con <tt>--help</tt> o <tt>-h</tt> para ver sus opciones.
 
-4. Go to http://localhost:3000 and you'll see:
+4. Ve a http://localhost:3000 y veras:
 
     "Welcome aboard: You're riding Ruby on Rails!"
 
-5. Follow the guidelines to start developing your application. You may find the following resources handy:
+5. Sigue los lineamientos para comenzar a desarrollar tu aplicación. Puedes conseguir encontrar estos recursos utiles:
 
-* The README file created within your application.
-* The {Getting Started with Rails}[http://guides.rubyonrails.org/getting_started.html].
-* The {Ruby on Rails Tutorial}[http://railstutorial.org/book].
-* The {Ruby on Rails Guides}[http://guides.rubyonrails.org].
-* The {API Documentation}[http://api.rubyonrails.org].
+* El archivo README creado dentro de tu aplicación.
+* El documento {Comenzando con Rails}[http://guides.rubyonrails.org/getting_started.html].
+* El {Tutorial de Ruby on Rails}[http://railstutorial.org/book].
+* Las {Guías de Ruby on Rails}[http://guides.rubyonrails.org].
+* La {Documentación del API}[http://api.rubyonrails.org].
 
-== Contributing
+== Contribuir
 
-We encourage you to contribute to Ruby on Rails! Please check out the {Contributing to Rails
-guide}[http://edgeguides.rubyonrails.org/contributing_to_ruby_on_rails.html] for guidelines about how
-to proceed. {Join us}[http://contributors.rubyonrails.org]!
+Te invitamos a que contribuyas a Ruby on Rails! Por favor revisa la guia de {Contribuyendo con Rails
+}[http://edgeguides.rubyonrails.org/contributing_to_ruby_on_rails.html] para los lineamientos de como
+proceder. {Unete}[http://contributors.rubyonrails.org]!
 
-== Build Status {<img src="https://secure.travis-ci.org/rails/rails.png"/>}[http://travis-ci.org/rails/rails]
+== Estatus del build {<img src="https://secure.travis-ci.org/rails/rails.png"/>}[http://travis-ci.org/rails/rails]
 
-== Dependency Status {<img src="https://gemnasium.com/rails/rails.png?travis"/>}[https://gemnasium.com/rails/rails]
+== Estatus de las dependencias {<img src="https://gemnasium.com/rails/rails.png?travis"/>}[https://gemnasium.com/rails/rails]
 
-== License
+== Licencia
 
-Ruby on Rails is released under the MIT license:
+Ruby on Rails se provee bajo la licencia MIT:
 
 * http://www.opensource.org/licenses/MIT
